<resources>
    <string name="app_name">Fludd</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entra o Registrate</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenio !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_horario">Mi horario</string>
    <string name="menu_asistencia">Mis asistencias</string>
    <string name="menu_cursos">Mis cursos</string>
    <string name="menu_cerrar">Cerrar</string>
    <string name="menu_noticias">Noticias</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Correo electronico</string>
    <string name="passowrd">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="show_pwd">Mostrar contraseña</string>
    <string name="hide_pwd">Ocultar contraseña</string>
    <string name="forgot">Olvidé mi contraseña?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">No tienes una cuenta? Regístrate aquí.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Crea una cuenta</string>
    <string name="already_user">Ya tienes tu cuenta? Inicia aqui.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="registrarte">Registrarte</string>

    <string name="back">BACK</string>
</resources>
