<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_forum"
            android:title="@string/menu_noticias"></item>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"></item>
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/ic_horario"
            android:title="@string/menu_horario"></item>
        <item
            android:id="@+id/nav_asistencia"
            android:icon="@drawable/ic_asistencia"
            android:title="@string/menu_asistencia"></item>
        <item
            android:id="@+id/nav_cursos"
            android:icon="@drawable/ic_cursos"
            android:title="@string/menu_cursos"></item>
    </group>
    <item
        android:title="Admin" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_admin"
                    android:icon="@drawable/ic_sms"
                    android:title="Agregar Noticias"></item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_close"
        android:icon="@drawable/ic_close"
        android:title="@string/menu_cerrar"></item>
</menu>